# history_archiver

./: .gitignore  Caddyfile  Cargo.toml  Makefile  config.yml
.github/workflows/: frontend.yml  rust.yml
frontend/src/: App.svelte  api.js
frontend/src/components/: Day.svelte  History.svelte  Visit.svelte
history_archiver/src/: config.rs
history_archiver/src/destination/: mod.rs
history_archiver/src/source/: chrome.rs  firefox.rs  mod.rs  safari.rs
src/: config.rs  main.rs  model.rs
src/destination/: file.rs  meilisearch.rs  mod.rs
src/source/: chrome.rs  firefox.rs  mod.rs  safari.rs
