[package]
name = "history_archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.28", features = ["bundled", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = { version="0.3", features = ["serde-human-readable"] }
flate2 = "1.0"
meilisearch-sdk = "0.22"
futures = "0.3"
rust-ini = "0.18"
clap = { version = "4.1", features = ["derive"] }
serde_yaml = "0.9"
